# WolfVision_2022

./: .gitmodules  CMakeLists.txt  README.md
Camera/Data/: 041120120119.mvdat  049010410190.mvdat
base/: wolfvision.cpp  wolfvision.hpp
configs/: robo_config.json
configs/angle_solve/: basic_pnp_config.xml
configs/armor/: basic_armor_config.xml  spin_armor.yaml
configs/buff/: basic_buff_config.xml
configs/camera/: camera_param.yaml  mv_camera_config_1155.xml  mv_camera_config_491.xml  mv_camera_config_4912.xml  mv_camera_config_4913.xml  mv_camera_config_554.xml  mv_camera_config_555.xml
configs/net/: opt4_FP16.mapping  opt4_FP16.xml
configs/net/cache/: 18ff025f8302070d.cl_cache  1cbf8f29ca33bbfb.cl_cache  1cf93ccdb9a23d1b.cl_cache  1d6a1f8d92573d0a.cl_cache  2bf8421ed2d5dd12.cl_cache  2f68e275120cbc40.cl_cache  65850e50d528cb60.cl_cache  6b07371677be1cc6.cl_cache  85c3b2a843b2db09.cl_cache  871c61f87eedee6b.cl_cache  8dd205ffdb587edf.cl_cache  91df45e5e8daf8f7.cl_cache  9decb224df303323.cl_cache  c41bf277f3237864.cl_cache  c45490c3cc986cdf.cl_cache  c5564ccb18aa8fd9.cl_cache  c55c23802ddfa8ff.cl_cache  c59d67bcf0859742.cl_cache  c63a9a4f9989824d.cl_cache
configs/record/: 10.avi
configs/serial/: uart_serial_config.xml
devices/camera/: mv_video_capture.cpp  mv_video_capture.hpp
devices/serial/: serial.cpp  serial.hpp
module/armor/: basic_armor.cpp  basic_armor.hpp  spin_armor.hpp
module/buff/: abstract_object.hpp  abstract_target.hpp  basic_buff.cpp  basic_buff.hpp
module/net/: basic_net.cpp  basic_net.h
scripts/: autoconfig.sh
test/: snap.cpp  test_shoot_delay.cpp
utils/: fps.hpp  kalman.h  mjpeg_streamer.hpp  roi.hpp  simple_cpp_sockets.hpp  streamer.html  utils.hpp
utils/angle_solve/: abstract_pnp.hpp  basic_pnp.hpp
